--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,25 +12,11 @@ jobs:
         uses: actions/checkout@v2
       - name: Configuration 🖊️
         run: |
-          mkdir -p "build/"
-          mkdir -p "$HOME/status/"
-          echo 'MY_STATUS_HTML="build/index.html"' > config
-          echo 'MY_STATUS_JSON="build/status.json"' >> config
-          echo 'MY_MAINTENANCE_TEXT_FILE="status_maintenance_text.txt"' >> config
-          echo 'MY_HOSTNAME_FILE="status_hostname_list.txt"' >> config
-          echo 'This is a demo page of <a href="https://github.com/Cyclenerd/static_status">static_status</a>.' > status_maintenance_text.txt
-          echo 'This status page is generated with GitHub Action.' >> status_maintenance_text.txt
-          echo 'curl;https://www.heise.de/ping|<a href="https://www.heise.de/">heise online</a>' > status_hostname_list.txt
-          echo 'curl;ftp://ftp.debian.org/debian/README' >> status_hostname_list.txt
-          echo 'nc;8.8.8.8|DNS @ Google;53' >> status_hostname_list.txt
-          echo "config"
-          cat config
-          echo "status_maintenance_text.txt"
-          cat status_maintenance_text.txt
-          echo "status_hostname_list.txt"
-          cat status_hostname_list.txt
-      - name: Status 🚦
-        run: bash status.sh loud
+          mkdir -p build/
+          cp images/demo/* build/
+          cd build/
+      - name: Build 🖼️
+        run: bash ../gallery.sh -t "Demo Gallery"
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.0.0
         with:
