--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,14 @@ jobs:
         uses: actions/checkout@v2
       - name: Configuration 🖊️
         run: |
+          ls -lah
           mkdir -p build/
           cp images/demo/* build/
           cd build/
       - name: Build 🖼️
-        run: bash ../gallery.sh -t "Demo Gallery"
+        run: |
+          ls -lah
+          bash ../gallery.sh -t "Demo Gallery"
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.0.0
         with:
